Misc improvements (prevent panning when sidebar is open on mobile)

--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -106,8 +106,8 @@ $sidebar-width-mobile: 13.0rem;
     @include touch {
         &.section {
             padding-top: 4rem;
-            padding-left: 2rem;
-            padding-right: 2rem;
+            padding-left: 1.0rem;
+            padding-right: 1.0rem;
         }
         & {
             -webkit-transition: transform 0.5s ease;
